K8s/Gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass

metadata:
  name: envoy-gateway-class

spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: microservices-gateway

spec:
  gatewayClassName: envoy-gateway-class

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
