K8s/Gateway/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: platform-route

spec:
  parentRefs:
    - name: microservices-gateway

  hostnames:
    - "microservices.local"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/platforms

      backendRefs:
        - name: platforms-clusterip-srv
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: commands-route

spec:
  parentRefs:
    - name: microservices-gateway

  hostnames:
    - "microservices.local"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/cs/platforms

      backendRefs:
        - name: commands-clusterip-srv
          port: 80
